--- a/_config.yml
+++ b/_config.yml
@@ -139,6 +139,7 @@ yat:
 # the browser is closed or not)
 #
 # night_mode: "auto"
+night_mode: "on"
 
 # Code badge setting
 # You can enable or disable the code badge and so on
